Fixed banner z-index

--- a/assets/css/custom-materialize.css
+++ b/assets/css/custom-materialize.css
@@ -67,7 +67,7 @@
 
 #banner {
   position: fixed;
-  z-index: 1200;
+  z-index: 996;
   top: 4rem;
   width: 100%;
   padding: 0.5rem;
